--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turma 06 HTML + CSS</title>
+    <title>Turma 06 HTML + CSS - Cardápio</title>
     <link href="estilo.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
@@ -19,7 +19,7 @@
    <br>
     <div class="div_central">
         <p>Calabresa com catupiry</p>
-       <img src="imagem/calcatupiry.jpg" alt="Calabresa com catupiry" width="10%" align:> 
+       <img src="imagem/calcatupiry.jpg" alt="Calabresa com catupiry" width="10%"> 
         <p> Pizza com recheio de queijo mussarela, Calabresa e Catupiry.</p>
     </div>
     <br>
