Update2 index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="div_central">
         <p>Calabresa com catupiry</p>
        <img src="imagem/calcatupiry.jpg" alt="Calabresa com catupiry" width="10%"> 
-        <p> Pizza com recheio de queijo mussarela, Calabresa e Catupiry.</p>
+        <p> Pizza com recheio de queijo mussarela, calabresa e catupiry.</p>
     </div>
     <br>
     <div class="div_central">     
