Update5 index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <br>
     <div class="div_central">
         <p>Calabresa com catupiry</p>
-       <img src="imagem/calcatupiry.jpg" alt="Calabresa com catupiry" width="20%"> 
+       <img src="imagem/Calcatupiry.jpg" alt="Calabresa com catupiry" width="20%"> 
         <p> Pizza com recheio de queijo mussarela, calabresa e catupiry.</p>
     </div>
     <br>
