--- a/index.html
+++ b/index.html
@@ -15,24 +15,31 @@
     <h3>Margherita - Especialidade da Casa! </h3>
     <img src="imagem/margherita.jpg" alt="Margherita"  width="30%" height="30%">
     <p> Pizza feita com tomate, queijo muçarela e manjericão.</p>
+    </p>R$38,00</p>
    </div>
    <br>
     <div class="div_central">
         <p>Calabresa com catupiry</p>
        <img src="imagem/Calcatupiry.jpg" alt="Calabresa com catupiry" width="30%"> 
         <p> Pizza com recheio de queijo mussarela, calabresa e catupiry.</p>
+         </p>R$35,00</p>
     </div>
     <br>
     <div class="div_central">     
         <p>Calabresa Acebolada</p>
         <img src="imagem/calabresa.jpg"  alt="calabresa acebolada"  width="30%">
         <p> Pizza com recheio de queijo muçarela, calabresa e cebola.</p>
+         </p>R$30,00</p>
     </div>
     <br>
     <div class="div_central">
         <p> Portuguesa </p>
         <img src="imagem/portuguesa.jpg" alt="portuguesa" width="30%">
         <p> Pizza com recheio de queijo muçarela, presunto, cebola, pimentão, tomate, ovo cozido.</p>
+         </p>R$35,00</p>
+    </div>
+    <div class="div_contato"> 
+        <p>Delivery: (11)9999-9999</p> 
     </div>
 </body> 
 </html>
