--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
          </p>R$35,00</p>
     </div>
     <div class="div_contato"> 
-        <p>Delivery: (11)9999-9999</p> 
+        <p>Delivery:</p>
+            <strong>(11)9999-9999</strong> 
     </div>
 </body> 
 </html>
