--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="div_titulo">
         <h1>Cardápio - Pizzaria D'Ellas</h1>
-        </p><b>Irresistivelmente saborosa!!! Você não pode perder!!!</b></p>
+        </p>Irresistivelmente saborosa!!! Você não pode perder!!!</p>
     </div>
   <br>
   <div id="div_unica">
